--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
-	"compilerOptions": {
-		"target": "es6",
-		"skipLibCheck": true,
-		"declaration": true,
-		"inlineSourceMap": false,
-		"strict": true,
-		"pretty": true,
-		"removeComments": true,
-		"allowSyntheticDefaultImports": true
-	},
-	"include": [
-		"src"
-	]
+  "compilerOptions": {
+    "target": "es6",
+    "skipLibCheck": true,
+    "declaration": true,
+    "inlineSourceMap": false,
+    "strict": true,
+    "pretty": true,
+    "removeComments": true,
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react"
+  },
+  "include": ["src"]
 }
